# wave-simulation

wave-simulation/: CMakeLists.txt  Makefile  Makefile.simple  README.md  SHADER_FIXES.md  build.sh
wave-simulation-simple/: Makefile  build_instructions.txt  wave_simple.cpp
wave-simulation/include/: ShaderManager.h  WaveRenderer.h
wave-simulation/shaders/: test.vert
wave-simulation/src/: ShaderManager.cpp  WaveRenderer.cpp  main.cpp
